# drylib.c

./: .gitignore  .travis.yml  AUTHORS  CHANGES.rst  CREDITS.rst  Makefile  README.rst  TODO.rst  drylib.c  drylib.h  test.c
.drytarget/: modules.tsv
doc/examples/: hello
doc/examples/hello_autoconf/: .gitignore  Makefile.am  README.rst  configure.ac  hello.c
doc/examples/hello_cmake/: .gitignore  CMakeLists.txt  README.rst
doc/examples/hello_make/: Makefile  README.rst
doc/examples/hello_pkgconfig/: .gitignore  Makefile  hello.c
etc/compat/glib/: Makefile  glib.h  test.c
etc/compat/glib/glib/: gbytes.h  gerror.h  glibconfig.h  gmacros.h  gstring.h  gtypes.h  gunicode.h  gutils.h  guuid.h
etc/compat/gmp/: Makefile  mini-gmp.h  mini-mpq.h  test.c
etc/pkgconfig/: drylib-c.pc.in
src/: dry.h  drylib.h
src/dry/: base.c  base.cpp  base.h  meta.h  qty.h  text.h
src/dry/base/: bool.h  char.h  complex.h  float.h  function.h  integer.h  natural.h  optional.h  predicate.h  rational.h  real.h  string.h  word.h
src/dry/meta/: error.cpp  error.hpp  feature.cpp  memory.cpp  module.cpp  module.h  version.cpp  version.h
src/dry/text/: ascii.c  ascii.cpp  ascii.h  printf.c  printf.cpp  printf.h  utf8.c  utf8.cpp  utf8.h
